--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "echarts": "^5.4.0",
     "element-plus": "^2.2.19",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
     "sass": "^1.55.0",
     "screenfull": "^6.0.2",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.56",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
