--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^3.2.38",
     "vue-baidu-map-3x": "^1.0.28",
     "vue-count-to": "^1.0.13",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-seamless-scroll": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.56",
