--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,37 @@
+
+
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "strict": true,
+    "jsx": "preserve",
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "lib": ["ESNext", "DOM"],
+    "skipLibCheck": true,
+    "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
-    "preserveValueImports":false
+    "removeComments": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["vite/client"],
   },
-
-  "references": [
-    {
-      "path": "./tsconfig.config.json"
-    }
+  "include": [
+    "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue",
+    "vue-tianditu"
   ],
-  "lib": ["es2017"]
-
+  "references": [{
+    "path": "./tsconfig.node.json"
+  }],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
